creusot/tests/should_fail/cycle.stderr
warning: unused import: `creusot_contracts::*`
 --> cycle.rs:2:5
  |
2 | use creusot_contracts::*;
  |     ^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[creusot]: encountered a cycle during translation: [{Item(DefId(0:5 ~ cycle[08f3]::f))}, {Item(DefId(0:6 ~ cycle[08f3]::g))}, {Item(DefId(0:5 ~ cycle[08f3]::f))}]
 --> cycle.rs:4:1
  |
4 | pub fn f() {
  | ^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

